--- a/app/views/blogs/blog_03_backtoschool.html.erb
+++ b/app/views/blogs/blog_03_backtoschool.html.erb
@@ -6,7 +6,8 @@
       <div class="blog_body">
 
         <div class="blog_tit bts_title">
-          <h2>The best <span class="backtoshool_title">Back TO School</span> Deals</h2>
+
+          <h2>A curated list of the best<br /><span class="backtoshool_title">Back TO School</span> Deals</h2>
         </div>
 
         <div class="school_box box_top clearfix">
