--- a/app/views/promocodes_days/_day_01.html.erb
+++ b/app/views/promocodes_days/_day_01.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SJldPH">Sweese 3169 Porcelain Cute Butter Dish with Lid, Perfect for East/West Butter, Steel Blue</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.20</span><span class="ori_price">$17.99</span></address>
@@ -23,7 +23,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>25% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2ycUm5g">Mirror Dash Cam Backup Camera 9.88" Full HD Touch Screen Car Dash Camera Stream Media Dual Lens 170° 1080P Front and...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$95.24</span><span class="ori_price">$126.99</span>
@@ -43,7 +43,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2ye01YG">CAMEL CROWN Womens Water Sports Shoes Barefoot Slip-on Loafers Summer Outdoor Quick-Dry Aqua Socks for Beach Swim Surf Yoga Exercise</a></p>
     <div class="code_high">
       <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span></address>
@@ -61,7 +61,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LIIiBy">TAIL UP Dog Harness - Adjustable No-Pull Reflective Pet Harness Mesh Vest, Easy On/Off Mesh Harness Small Medium Large Dogs...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.40</span><span class="ori_price">$15.99</span></address>
@@ -79,7 +79,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/3134XMf">Travel Laptop Backpack, College Backpack,Student Backpack with Computer Bag for Women & Men Fits 15.6 Inch Laptop and Notebook（Gray）</a></p>
     <div class="code_high">
       <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span></address>
@@ -97,7 +97,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30ZUKAw">Manfiter Bluetooth FM Transmitter Wireless Radio Adapter Car Kit Bluetooth 4.2 Transmitter Audio for Car,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.59</span><span class="ori_price">$15.99</span></address>
@@ -115,7 +115,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JWGnaf">Fixget Inflatable Pool Floats, Newest Unicorn Giant Pool Float Toys with Valves, Large Rideable Summer Beach Swimming...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
@@ -133,7 +133,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2yf9TRQ">CYZ Men's 3-PK Cotton Stretch Boxer Briefs for Men Pack of 3</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
@@ -151,7 +151,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SHRVB0">Fatmoon Automatic Clamping Car Phone Mount Wireless Charger Adjustable Gravity Air Vent Phone Holder ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.59</span><span class="ori_price">$23.98</span></address>
@@ -169,7 +169,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JV2rly">BINLEFOIS Portable Cool Mist Vaporizer and Handheld Inhaler Machine, Kids Adults and Daily Home Use</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.93</span><span class="ori_price">$33.85</span></address>
@@ -187,7 +187,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>55% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JUDVkG">CLOFY 5'' Full-Chrome 24-Setting Combo Shower Head, High Pressure Separetely or Together Hand Held Shower Combo with Hose and Holder</a></p>
     <div class="code_high">
       <address><span class="dis_price">$18.00</span><span class="ori_price">$39.99</span></address>
@@ -205,7 +205,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>30% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JUYLjV">Hair Cutting Scissors/Thinning Shears/Professional Barber/Salon Razor Edge Tools set/Mustache Scissors and Barber Scissors...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.19</span><span class="ori_price">$15.99</span>
@@ -226,7 +226,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>20% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LM8wCX">Lemi Shine Dishwashing Detergent, 42 Pac of Powder & Gel Combo, 20.55 oz, Powered by 100% Natural Citric Extracts,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$13.59</span><span class="ori_price">$16.99</span></address>
@@ -244,7 +244,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JUXmdc">CAMEL CROWN Microfiber Cooling Towel Quick Dry Travel Towel, 3 Size Travel Sports Towel, Absorbent Towel ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.20</span><span class="ori_price">$20.49</span></address>
@@ -262,7 +262,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30Yi6q4">CYZ Mens Cotton Stretch V-Neck Undershirts Fitted T-Shirt 2-PK</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.50</span><span class="ori_price">$12.99</span></address>
@@ -280,7 +280,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>55% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YkcNzr">Livhò Blue Light Blocking Glasses, UV400 Transparent Lens,Phone Computer Reading Glasses,Anti Eyestrain/Anti Ray,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.99</span><span class="ori_price">$19.98</span></address>
@@ -298,7 +298,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LJHoo9">LCD Writing Tablet 8.5 Inch Magnetic Board Fridge Office Memo Boards White Board LCD Notepad (Pink)</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.49</span><span class="ori_price">$12.98</span></address>
@@ -316,7 +316,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Yq0Ece">MAJESTIC PURE Hyaluronic Acid Serum for Face - Best Advanced Formula for Skin Brightening, Hydration and Facial Moisturizing...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.75</span><span class="ori_price">$21.50</span></address>
@@ -334,7 +334,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JZIcU9">Retinol Serum, BREYLEE Anti Aging Anti Wrinkle Face Serum Vitamin A Retinol with Natural Ingredients for Skin Care Eye ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$5.99</span><span class="ori_price">$11.97</span></address>
@@ -352,7 +352,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SI1JuU">30% Vitamin C Serum with Hyaluronic Acid & VE for Face,Neck and Eye Treatment Serums | Anti-Aging,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$4.19</span><span class="ori_price">$6.99</span></address>
