--- a/app/views/promocodes_days/_day_02.html.erb
+++ b/app/views/promocodes_days/_day_02.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>70% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LKYked">CIOR Water Shoes Men Women Aqua Shoes Barefoot Quick-Dry Swim Shoes for Boating Walking Driving Beach Yoga</a></p>
     <div class="code_high">
       <address><span class="dis_price">$5.70</span><span class="ori_price">$18.99</span></address>
@@ -23,7 +23,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JZnUdp">PETPAWJOY Cat Bed, Cat Window Perch Window Seat Suction Cups Space Saving Cat Hammock Pet Resting Seat Safety Cat Shelves...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.95</span><span class="ori_price">$17.89</span></address>
@@ -41,7 +41,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SKF1Cv">Stainless Steel Insulated Water Bottle - Wide Mouth Leak Proof Vacuum Outdoors Coffee Mug - Ice Cold Up to 24 Hrs/Hot...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.00</span><span class="ori_price">$11.99</span></address>
@@ -59,7 +59,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Mp38VZ">NEWYES Reusable Smart Notebook, A5 Size Wirebound Notebook with Cloud Storage - 50 Pages Wide Rule & 50 Pages Dotted</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
@@ -77,7 +77,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30YWdqC">HalfSun Fitness Tracker, Activity Tracker Fitness Watch with Heart Rate Monitor, Blood Pressure Monitor,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$23.39</span><span class="ori_price">$38.99</span></address>
@@ -95,7 +95,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="product_link">Brewsly Insulated Water Bottle, Double Wall Vacuum Insulated Stainless Steel Leak Proof Sports Water Bottle, with BPA Free Cap,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
@@ -113,7 +113,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>55% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LKZrup">Cell Phone Armband for Running, Exercise - Workout Phone Holder with Adjustable Arm Band, Zipper Pocket - Universal Armband for iPhone ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$4.50</span><span class="ori_price">$9.99</span></address>
@@ -131,7 +131,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>20% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YmoUvT">Pure Hyaluronic Acid Serum Powder | 100% NATURAL | High Molecular Weight | Locks in moisture and creates full,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$13.56</span><span class="ori_price">$16.95</span>
@@ -151,7 +151,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>70% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LKYuSy">JINRI Travel Hair Dryer 1875 Watt Dual Voltage Blow Dryer Dc Motor Foldable Handle Lightweight Negative Ionic Folding Hair Dryer</a></p>
     <div class="code_high">
       <address><span class="dis_price">$29.10</span><span class="ori_price">$96.99</span></address>
@@ -169,7 +169,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30Zazan">Bluetooth Shower Speakers, HAISSKY Portable Wireless Waterproof Speaker with FM Radio & Suction Cup, Pairs Easily to...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$discounted_price</span><span class="ori_price">$24.99</span></address>
@@ -187,7 +187,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LKURwd">Adorllya Womens Slides Sandals Slip on Bowknot Cute Slippers Cofortable Flip Flop Wide Width</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.60</span><span class="ori_price">$28.99</span></address>
@@ -205,7 +205,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JX0XaD">One Strap Sling Canvas Cross Body 13-inch Laptop Messenger Bag Travel Shoulder Backpack</a></p>
     <div class="code_high">
       <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span></address>
@@ -223,7 +223,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SN99gr">Elevated Cat Beds Cat Hammock Pet Cots Small Dog Beds Wooden Detachable Wooden Frame Square Hanging Cat Sofa Pet...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
@@ -243,7 +243,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>75% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Yp6rPp">Fastorm Mens Solid Polo Shirts Short Sleeve Collared Golf Pique Polo Wicking Shirt</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.99</span><span class="ori_price">$35.97</span></address>
@@ -261,7 +261,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>30% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Yv4BwA">Juicer Aicok Juice Extractor with Wide Mouth, 3 Speed Centrifugal Juicer for Fruit and Vegetable, plus Pulse Function, ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$34.98</span><span class="ori_price">$49.97</span></address>
@@ -279,7 +279,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Yo1v1n">Essential Oil Diffuser, 2 Pack Aromatherapy Diffuser for Essensial Oils Portable Ultrasonic Cool Mist Humidifier with...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.99</span><span class="ori_price">$23.99</span></address>
@@ -297,7 +297,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2yj1hdi">Gravity Car Phone Mount FLOVEME Cell Phone Holder for Car Hands Free Auto Lock Air Vent Car Phone Holder Compatible iPhone...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span>
@@ -317,7 +317,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30Yc7kZ">MESOCO Waterproof Dry Bag, Set of 2, for Kayaking Beach Rafting Floating Backpack Boating with Waterproof Phone Case</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.40</span><span class="ori_price">$25.99</span></address>
@@ -335,7 +335,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2yhkGLF">Electronics Organizer Bag Portable Travel Organizer Storage Carrying Bag for USB Cables,Chargers,Power Bank,iPad Mini(Black)</a></p>
     <div class="code_high">
       <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
@@ -353,7 +353,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30ZKDvq">Aureday 39.5” Cell Phone Tripod, Portable Extendable Adjustable Tripod Stand with Cellphone Mount & Wireless Remote,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
@@ -371,7 +371,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YrCKkR">Odistar USB Rechargeable Tactical Flashlight Built-in COB Side Light and Magnet(18650 Battery Included).Get free camping lights and head lamp</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.94</span><span class="ori_price">$19.88</span></address>
@@ -389,7 +389,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JWybqC">Babyltrl Dog Travel Bag - Airline Approved Pet Food Carrier Bag for Dogs - Includes 1 Pet Travel Tote, 2 Dog Food Containers,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$21.59</span><span class="ori_price">$35.99</span>
@@ -409,7 +409,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JZox6F">LED Strip Lights 16.4ft, RGB 5050 LEDs Color Changing Kit with 24key Remote Control and Power Supply, Mood Lighting Led ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.19</span><span class="ori_price">$16.99</span></address>
@@ -427,7 +427,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>65% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2yjEKNk">Ankle Socks Women Low Cut Athletic Cushioned with Ultra Soft for Running 6 Pairs</a></p>
     <div class="code_high">
       <address><span class="dis_price">$4.90</span><span class="ori_price">$13.99</span></address>
@@ -445,7 +445,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SIDYmp">NANAN Moroccan Blackout Curtains, Lattice Print Thermal Insulated Blackout Window Curtains,Room Darkening Geometric Blackout...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.60</span><span class="ori_price">$28.99</span></address>
