--- a/app/views/promocodes_days/_day_05.html.erb
+++ b/app/views/promocodes_days/_day_05.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>70% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JXohDU">Elzle 25000mAh Quick Charger Power Bank, Ultra Fast Charger 5V/5A with Dual Input(Type-C and Micro USB),...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$27.00</span><span class="ori_price">$89.99</span></address>
@@ -23,7 +23,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2KdyrR9">DveeTech Dash Camera for Cars 1920x1080p【Super Night Vision】 3" IPS LCD FHD 1080P Screen 170°HDR/WDR G-Sensor Car Video...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
@@ -43,7 +43,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>30% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YdNkHV">Screen Replacement Compatible iPhone 6S White 4.7inch Digitizer Repair LCD Replacement Kit Assembly</a></p>
     <div class="code_high">
       <address><span class="dis_price">$21.69</span><span class="ori_price">$30.99</span></address>
@@ -61,7 +61,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SzsQbu">Dealz Frenzy Insulated Tumbler-Double Wall Stainless Steel Travel Coffee Mug with Lid,Thermo Cup BPA Free...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.00</span><span class="ori_price">$15.99</span></address>
@@ -79,7 +79,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SyL3pu">Comfort & Relax Shredded Bamboo Memory Foam Pillow for Neck Support with Free Pillowcase, KING</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.40</span><span class="ori_price">$40.99</span></address>
@@ -97,7 +97,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JNyRyq">ELECDER D10 True Wireless Earbuds Bluetooth 5.0 in Ear with Microphone, 3D Stereo Sound, Charging Case for Workout, Running</a></p>
     <div class="code_high">
       <address><span class="dis_price">$20.00</span><span class="ori_price">$39.99</span></address>
@@ -115,7 +115,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JYT3MB">Men's Running Sneakers, Lightweight and Breathable Comfortable Walking Shoes</a></p>
     <div class="code_high">
       <address><span class="dis_price">$19.13</span><span class="ori_price">$31.89</span></address>
@@ -133,7 +133,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JTNSxm">MorePro Waterproof Health Tracker, Fitness Tracker Color Screen Sport Smart Watch,Activity Tracker with Heart Rate...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$23.00</span><span class="ori_price">$45.99</span>
@@ -153,7 +153,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JNDF6W">CORNMI Power Bank 20000mAh Portable Charger Battery Pack USB Charger Bank High Capacity External Battery Compatible with iPhone,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$16.50</span><span class="ori_price">$32.99</span></address>
@@ -171,7 +171,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>45% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LDr0pg">Laptop Backpack, Business Computer Bag Waterproof Travel Backpack College School Backpack for Men Women with USB Charging Port...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$15.39</span><span class="ori_price">$27.99</span></address>
@@ -189,7 +189,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JYTQx3">MAKHISTORY Plastic 8-Tab Binder Dividers with Two Pockets - 3 Sets, Insertable Tab Dividers for 3-Ring Binder, ...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.49</span><span class="ori_price">$22.99</span></address>
@@ -207,7 +207,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YejpiE">CYZ Men's 3-PK 100% Cotton Crew Neck T-Shirt Undershirt</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
@@ -225,7 +225,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JYS6DZ">Fitpolo Fitness Tracker, Health Smart Watch Heart Rate Monitor, Waterproof Activity Tracker with Sleep Monitor,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$17.5</span><span class="ori_price">$34.99</span></address>
@@ -243,7 +243,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>80% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LDtaVP">MYSKY HOME - Fashion Shower Curtain - Pink Rose Flower and Lovely Woman Digital Print Pattern Curtain for Bathroom...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$4.00</span><span class="ori_price">$19.99</span></address>
@@ -261,7 +261,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JY10BW">VEHHE Dog Car Seat Covers Pet Seat Cover Hammock for Back Seat - 100% Waterproof Scratch Proof Nonslip Backing Washble...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$15.20</span><span class="ori_price">$37.99</span></address>
@@ -279,7 +279,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LE7pVX">HKR Womens Slip On Fashion Sneakers Summer Breathable Mesh Shoes</a></p>
     <div class="code_high">
       <address><span class="dis_price">$14.80</span><span class="ori_price">$36.99</span></address>
@@ -297,7 +297,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>15% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LDvjAO">Braun MGK3040 7-in-1 All-in-One Beard Trimmer for Men, Cordless Hair Clipper, Black/Blue, with 5 Attachments and Gillette Body Razor</a></p>
     <div class="code_high">
       <address><span class="dis_price">$29.70</span><span class="ori_price">$34.94</span>
@@ -317,7 +317,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>72% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="product_link">LEYOSOV Springform, Non-Stick Cake Pan, 7Inch, Fits 6Qt Instant Pot</a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.72</span><span class="ori_price">$23.99</span></address>
@@ -335,7 +335,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2K3MYyJ">ZonLi Premium Weighted Blanket 20lbs(60''x80'', Queen Size), Cooling Weighted Blanket for Adults 180-220 lbs,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$53.94</span><span class="ori_price">$89.90</span></address>
@@ -353,7 +353,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LD4SeM">ALICROWN False Eyelashes Natural Lashes BLUE (5 Pairs) </a></p>
     <div class="code_high">
       <address><span class="dis_price">$3.00</span><span class="ori_price">$9.58</span></address>
@@ -371,7 +371,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y7YoGw">Livho Blue Light Blocking Glasses Filter UV Glare Retro Round Ultra Lightweight Computer Game Glasses...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.99</span><span class="ori_price">$19.98</span>
@@ -391,7 +391,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>30% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SwHzDS">Pantene, Rescue Shots Hair Ampoules Treatment, Intensive Repair of Damaged Hair, Pro-V, 0.5 fl oz (3 Count), Twin Pack </a></p>
     <div class="code_high">
       <address><span class="dis_price">$6.96</span><span class="ori_price">$9.94</span></address>
