--- a/app/views/promocodes_days/_day_06.html.erb
+++ b/app/views/promocodes_days/_day_06.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>30% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SHx0xZ">True Wireless Earbuds, ALOFOX Latest Bluetooth 5.0 Auto Pairing HiFi Sound Bluetooth Earbuds with Charging Case,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$27.99</span><span class="ori_price">$39.99</span>
@@ -25,7 +25,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>70% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2y88sEP">64GB USB C Flash Drive, Small USB 3.0 Flash Drives Type C Micro USB OTG Adapter for Android Samsung LG Memory Stick...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$10.72</span><span class="ori_price">$35.74</span></address>
@@ -43,7 +43,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30Wuy9L">SPACE LION Weighted Blanket Heavy Blanket 100% Cotton Material with Glass Beads (48''x72'' 12lbs)</a></p>
     <div class="code_high">
       <address><span class="dis_price">$40.20</span><span class="ori_price">$67.00</span>
@@ -63,7 +63,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>51% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JTb7ct">IDISKK True Wireless Earbuds Touch-Control Bluetooth Auto-Pairing HiFi Stereo Sports Earphones with Built-in Microphone...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$15.19</span><span class="ori_price">$30.99</span></address>
@@ -81,7 +81,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>70% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/310Po89">Moon Lamp Touch Control Lamp Night Light,5.9” Extra Large,3D Print USB Charging Moon Night Light Lamps for...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.50</span><span class="ori_price">$25.00</span></address>
@@ -99,7 +99,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>80% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SB1Icd">Natural Mattifying Moisturizer for Oily Skin, Combination Skin, Normal Skin - Oil Control Face Lotion with Pore Refining,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$5.60</span><span class="ori_price">$28.00</span></address>
@@ -117,7 +117,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JR6ejK">Selore USB C to HDMI Cable Adapter Compatible for 2017 Macbook Pro,Dell XPS 12/13/15,Samsung s8 and More With ....</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.84</span><span class="ori_price">$15.69</span></address>
@@ -135,7 +135,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SASk8q">DREAM PAIRS Women's Open Toe Flat Sandals</a></p>
     <div class="code_high">
       <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span></address>
@@ -153,7 +153,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/30Ugk9g">USX MOUNT Full Motion Swivel Articulating Tilt TV Wall Mount Bracket for 26-55" LED, OLED, 4K TVs-Fit for 32, 40, 50...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
@@ -171,7 +171,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>55% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JQGgwX">Aeifond Smart Watch Bluetooth Smartwatch Touchscreen Smart Wrist Watch Sports Fitness Tracker with Camera...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$15.75</span><span class="ori_price">$34.99</span></address>
@@ -189,7 +189,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>20% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SJ6jsU">Standing Desk, Height Adjustable Standing Desk Converter, 20.1×31.5 Inch Work Area, Fully Assembled (Black)</a></p>
     <div class="code_high">
       <address><span class="dis_price">$71.92</span><span class="ori_price">$89.90</span></address>
@@ -207,7 +207,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LIpcLB">Coffee Mug 16oz Vacuum Insulated Camping Mug with Lid, Double Wall Stainless Steel Travel Mug Coffee Cup Outdoor</a></p>
     <div class="code_high">
       <address><span class="dis_price">$13.19</span><span class="ori_price">$21.99</span></address>
@@ -225,7 +225,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>45% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/314dPBF">Compatible iWatch Apple Watch Charger, 2 in 1 iPhone Charger 3.9ft/1.2m Portable Charging Cable, Wireless Magnetic Travel...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.89</span><span class="ori_price">$17.99</span>
@@ -245,7 +245,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2MeseqK">Full Copper Kitchen Faucet - 3 Function Spray Single Handle High Arc Brushed Nickel Pull out Kitchen Faucet,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$40</span><span class="ori_price">$99.99</span></address>
@@ -263,7 +263,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2MdsiqI">Musonic Pet Carrier, Hand Free Sling for Small Dog Cat Adjustable Cotton Padded Strap Outdoor Travel Shoulder Bag...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$11.39</span><span class="ori_price">$18.99</span></address>
@@ -281,7 +281,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>40% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/3301rEu">Projector Paick 3200 Lumens Video Proejctor Support 1080P, 180" Big Screen for Home Cinema, Movies, TV, USB/HDMI/AV/VGA</a></p>
     <div class="code_high">
       <address><span class="dis_price">$59.99</span><span class="ori_price">$99.99</span></address>
@@ -299,7 +299,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LFHEo9">Foam Ear Plugs 50 Pairs Ear Plugs for Sleeping NNR 35dB Super Soft Noise Cancelling Ear Plugs for Shooting Hearing...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$5.50</span><span class="ori_price">$10.99</span></address>
@@ -317,7 +317,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LF9KA4">USB Type C Cable, Yoobao (2-Pack, 5ft, USB A to USB-C) Nylon Braided Fast Charging Charger Cord Compatible Samsun...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$5.20</span><span class="ori_price">$12.99</span></address>
@@ -335,7 +335,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>75% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JQ94FJ">SweatyRocks Women's Boho Wide Leg Elastic High Waist Palazzo Lounge Pants Capris</a></p>
     <div class="code_high">
       <address><span class="dis_price">$7.25</span><span class="ori_price">$28.99</span></address>
@@ -353,7 +353,7 @@
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>10% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2SAULro">JAX & CALI Pet Wipes – Natural Textured Paw and Body Wipes – Holistic – Hypoallergenic – Cruelty Free – Vegan...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$36.86</span><span class="ori_price">$40.95</span></address>
