--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -18,6 +18,16 @@
 .blog_body .school_box .right_side ul li span em{margin-left:7px;text-decoration:line-through;color:#616161;}
 .blog_body .school_box .right_side .btn{margin-top:30px;}
 .blog_body .school_box .right_side .btn a{text-decoration:none;background:#000;padding:10px 20px;border-radius:10px;color:#fff;}
+
+@media screen and (max-width:640px){
+  .blog_body .school_box .left_side{float:none;width:100%;margin-bottom:15px;}
+  .blog_body .school_box .right_side{float:none;width:100%;margin:0%;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .blogs .blog_body{}
+  .blog_body .school_box .left_side{float:left;width:30%;}
+  .blog_body .school_box .right_side{float:left;width:65%;margin-left:3%;}
+}
 /*blog_04*/
 .fourthjuly{}
 .fourthjuly ul{margin-top:30px;}
